[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "anand2312", email = "40204976+anand2312@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.9",
    "sim",
    "uvicorn[standard]>=0.35.0",
]

[project.scripts]
api = "api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
sim = { git = "https://github.com/anand2312/plant-simulation-lib.git" }
